# tftp_server

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
tftp_server/: main.cpp
